@@ -393,6 +393,8 @@ class TestTimeExtension < Test::Unit::TestCase # :nodoc:
   def test_strptime
     assert_equal(Time.utc(2005, 8, 28, 06, 54, 20), Time.strptime("28/Aug/2005:06:54:20 +0000", "%d/%b/%Y:%T %z"))
     assert_equal(Time.at(1).localtime, Time.strptime("1", "%s"))
+    assert_equal(false, Time.strptime('0', '%s').utc?)
+    assert_equal(3600, Time.strptime('0 +0100', '%s %z').utc_offset)
   end
 
   def test_nsec
